attached_assets/Pasted-file-included-from-queue-h-3-from-main-cpp-3-queue-cpp-8-1-error-Queue-does-n-1745368185130.txt
file included from queue.h:3,
                 from main.cpp:3:
queue.cpp:8:1: error: ‘Queue’ does not name a type
    8 | Queue<T>::Queue() : front_node(nullptr), rear_node(nullptr), count(0) {} //initializes empty queue with nodes set to null and count set to 0
      | ^~~~~
queue.cpp:11:1: error: ‘Queue’ does not name a type
   11 | Queue<T>::~Queue() { //called when queue is cleared, deletes all nodes in queue to prevent memory leaks
      | ^~~~~
queue.cpp:18:11: error: expected initializer before ‘<’ token
   18 | void Queue<T>::push(const T& item) { //push function
      |           ^
queue.cpp:30:11: error: expected initializer before ‘<’ token
   30 | void Queue<T>::pop() { //pop function
      |           ^
queue.cpp:41:8: error: expected initializer before ‘<’ token
   41 | T Queue<T>::front() const { //front function
      |        ^
queue.cpp:47:10: error: expected initializer before ‘<’ token
   47 | int Queue<T>::size() const { //size function
      |          ^
queue.cpp:52:11: error: expected initializer before ‘<’ token
   52 | bool Queue<T>::empty() const { //empty function
      |           ^
queue.cpp:57:11: error: expected initializer before ‘<’ token
   57 | void Queue<T>::move_to_rear() { //move item to rear function
      |           ^
In file included from main.cpp:4:
search.h:13:5: error: redeclaration of ‘template<class Item_Type> int recursive_last_search(const std::vector<Item_Type>&, const Item_Type&, size_t)’ may not have default arguments [-fpermissive]
   13 | int recursive_last_search(const std::vector<Item_Type>& items, const Item_Type& target, size_t pos_first = 0);
      |     ^~~~~~~~~~~~~~~~~~~~~
main.cpp: In function ‘int main()’:
main.cpp:34:22: error: ‘recursive_last_index’ was not declared in this scope; did you mean ‘recursive_last_search’?
   34 |     int last_index = recursive_last_index(vec, target); //call recursive last index function
      |                      ^~~~~~~~~~~~~~~~~~~~
      |                      recursive_last_search
In file included from queue.h:3,
                 from search.h:6,
                 from search.cpp:4:
queue.cpp:8:1: error: ‘Queue’ does not name a type
    8 | Queue<T>::Queue() : front_node(nullptr), rear_node(nullptr), count(0) {} //initializes empty queue with nodes set to null and count set to 0
      | ^~~~~
queue.cpp:11:1: error: ‘Queue’ does not name a type
   11 | Queue<T>::~Queue() { //called when queue is cleared, deletes all nodes in queue to prevent memory leaks
      | ^~~~~
queue.cpp:18:11: error: expected initializer before ‘<’ token
   18 | void Queue<T>::push(const T& item) { //push function
      |           ^
queue.cpp:30:11: error: expected initializer before ‘<’ token
   30 | void Queue<T>::pop() { //pop function
      |           ^
queue.cpp:41:8: error: expected initializer before ‘<’ token
   41 | T Queue<T>::front() const { //front function
      |        ^
queue.cpp:47:10: error: expected initializer before ‘<’ token
   47 | int Queue<T>::size() const { //size function
      |          ^
queue.cpp:52:11: error: expected initializer before ‘<’ token
   52 | bool Queue<T>::empty() const { //empty function
      |           ^
queue.cpp:57:11: error: expected initializer before ‘<’ token
   57 | void Queue<T>::move_to_rear() { //move item to rear function
      |           ^